@@ -6,6 +6,7 @@ Changes in 3.3.1
   - Enable prepared intersects operation for points
   - Fortify suspicious code found by static analisys tools
   - Fix for SOLARIS build 
+  - Fix EMPTY result from GEOSOffsetCurve with distance 0 (#454)
 
 Changes in 3.3.0
 2011-05-30
